--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
-i<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
+<head>Huddle on the Hardwood</head>
 <body>
 
-<p>Placeholder</p>
+<p>Future location for details and registration related to the 2017 3v3 Basketball tourney on July 29th, 2017</p>
 
 </body>
 </html>
