index redirect to registration

--- a/index.html
+++ b/index.html
@@ -1,9 +1,14 @@
 <!DOCTYPE html>
 <html>
-<head>Huddle on the Hardwood</head>
+<head>
+Huddle on the Hardwood
+<meta http-equiv="refresh" content="0; url=http://elkriverbasketball.com/Huddle_on_the_Hardwood.html" />
+</head>
 <body>
 
-<p>Future location for details and registration related to the 2017 3v3 Basketball tourney on July 29th, 2017</p>
+<p>For details and registration related to the 2017 3v3 Basketball tourney on July 29th, 2017
+see <a href="http://elkriverbasketball.com/Huddle_on_the_Hardwood.html"> here</a>
+</p>
 
 </body>
 </html>
