--- a/Huddle_on_the_Hardwood.html
+++ b/Huddle_on_the_Hardwood.html
@@ -239,7 +239,7 @@
 
             <p>Based on current registration numbers, we will be combining many of our divisions.  We will do our best to keep the divisions as fair as we can make them.</p>
 
-            <p>Tentative brackets and <a title="HOTH Rules" href="http://elkrvierbasketball.com/rules.pdf" target="_blank">rules</a>
+            <p>Tentative brackets and <a title="HOTH Rules" href="http://elkriverbasketball.com/rules.pdf" target="_blank">rules</a>
 will be emailed to all registered teams by mid week. The schedule of the tourney being is tentatively set to run from 10:30 AM  to 6:00 PM.</p>
 
             <p>More event information can be found <a title="HOTH Flyer" href="http://elkriverbasketball.com/flyer.pdf" target="_blank">here</a>.</p>
