Closed Online Registration

--- a/Huddle_on_the_Hardwood.html
+++ b/Huddle_on_the_Hardwood.html
@@ -179,7 +179,6 @@
     margin-top: auto;
     margin-top: initial;
   }
-  
   /*PREFERENCES STYLE*//*__INSPECT_SEPERATOR__*/
     /* Injected CSS Code */
 </style>
@@ -234,7 +233,7 @@
 
             <p>Teams are responsible for providing their own game jerseys (same color shirts for all players are acceptable).  Teams are also encouraged to get creative with their names and jerseys to stand out and show their style!</p>
 
-            <p><strong>Registration is still open</strong>; however, event T-shirts are no longer available for registrants.</p>
+            <p><strong>Walk-up registration is still open</strong>; however, online registration is closed and event T-shirts are no longer available for registrants.</p>
             <p>If someone wants to play but doesn't have a team, register on-site by 10:00 AM on the 29th and we will try to place you on a team or make a team with other walk up players who want to join.</p>
 
             <p>Based on current registration numbers, we will be combining many of our divisions.  We will do our best to keep the divisions as fair as we can make them.</p>
@@ -599,11 +598,9 @@ will be emailed to all registered teams by mid week. The schedule of the tourney
       </li>
       <li class="form-line jf-required" data-type="control_stripe" id="id_39">
         <label class="form-label form-label-top" id="label_39" for="input_39">
-          Payment Details
-          <span class="form-required">
-            *
-          </span>
+          Online registration is closed.  Please register at 10AM onsite on the day of the event.
         </label>
+<!--
         <div id="cid_39" class="form-input-wide jf-required">
           <div data-wrapper-react="true">
             <div data-wrapper-react="true">
@@ -701,6 +698,7 @@ will be emailed to all registered teams by mid week. The schedule of the tourney
                     </span>
                   </td>
                 </tr>
+-->
               </tbody>
             </table>
           </div>
