--- a/Huddle_on_the_Hardwood.html
+++ b/Huddle_on_the_Hardwood.html
@@ -705,11 +705,14 @@ will be emailed to all registered teams by mid week. The schedule of the tourney
         </div>
       </li>
       <li class="form-line" data-type="control_button" id="id_2">
+
         <div id="cid_2" class="form-input-wide">
           <div style="text-align:left;" class="form-buttons-wrapper">
+<!-- disable submit
             <button id="input_2" type="submit" class="form-submit-button" data-component="button">
               Submit
             </button>
+-->
           </div>
         </div>
       </li>
