prepend with 2017, redirect to erbyb

--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html>
 <head>
 Huddle on the Hardwood
-<meta http-equiv="refresh" content="0; url=http://elkriverbasketball.com/Huddle_on_the_Hardwood.html" />
+<meta http-equiv="refresh" content="0; url=http://www.erbyb.org/page/show/3531211-huddle-on-the-hardwood" />
 </head>
 <body>
 
 <p>For details and registration related to the 2017 3v3 Basketball tourney on July 29th, 2017
-see <a href="http://elkriverbasketball.com/Huddle_on_the_Hardwood.html"> here</a>
+see <a href="http://www.erbyb.org/page/show/3531211-huddle-on-the-hardwood" here</a>
 </p>
 
 </body>
